bindings/c/include/wickra.h

typedef struct StochRsi StochRsi;
typedef struct SuperSmoother SuperSmoother;
typedef struct T3 T3;
typedef struct TailRatio TailRatio;
typedef struct Tema Tema;
typedef struct Tii Tii;
typedef struct TrendLabel TrendLabel;
typedef struct TrendStrengthIndex TrendStrengthIndex;
typedef struct Trendflex Trendflex;
typedef struct Trima Trima;
typedef struct Trix Trix;
typedef struct Tsf Tsf;
typedef struct TsfOscillator TsfOscillator;
typedef struct Tsi Tsi;
typedef struct UlcerIndex UlcerIndex;
typedef struct UniversalOscillator UniversalOscillator;
typedef struct UpsidePotentialRatio UpsidePotentialRatio;
typedef struct ValueAtRisk ValueAtRisk;
typedef struct Variance Variance;
struct StochRsi *wickra_stoch_rsi_new(uintptr_t rsi_period, uintptr_t stoch_period);
double wickra_stoch_rsi_update(struct StochRsi *handle, double value);
void wickra_stoch_rsi_batch(struct StochRsi *handle, const double *input, double *out, uintptr_t n);
void wickra_stoch_rsi_reset(struct StochRsi *handle);
void wickra_stoch_rsi_free(struct StochRsi *handle);
struct SuperSmoother *wickra_super_smoother_new(uintptr_t period);
double wickra_super_smoother_update(struct SuperSmoother *handle, double value);
void wickra_super_smoother_batch(struct SuperSmoother *handle,
                                 const double *input,
                                 double *out,
                                 uintptr_t n);
void wickra_super_smoother_reset(struct SuperSmoother *handle);
void wickra_super_smoother_free(struct SuperSmoother *handle);
struct T3 *wickra_t3_new(uintptr_t period, double v);
double wickra_t3_update(struct T3 *handle, double value);
void wickra_t3_batch(struct T3 *handle, const double *input, double *out, uintptr_t n);
void wickra_t3_reset(struct T3 *handle);
void wickra_t3_free(struct T3 *handle);
struct TailRatio *wickra_tail_ratio_new(uintptr_t period);
double wickra_tail_ratio_update(struct TailRatio *handle, double value);
void wickra_tail_ratio_batch(struct TailRatio *handle,
                             const double *input,
                             double *out,
                             uintptr_t n);
void wickra_tail_ratio_reset(struct TailRatio *handle);
void wickra_tail_ratio_free(struct TailRatio *handle);
struct Tema *wickra_tema_new(uintptr_t period);
double wickra_tema_update(struct Tema *handle, double value);
void wickra_tema_batch(struct Tema *handle, const double *input, double *out, uintptr_t n);
void wickra_tema_reset(struct Tema *handle);
void wickra_tema_free(struct Tema *handle);
struct Tii *wickra_tii_new(uintptr_t sma_period, uintptr_t dev_period);
double wickra_tii_update(struct Tii *handle, double value);
void wickra_tii_batch(struct Tii *handle, const double *input, double *out, uintptr_t n);
void wickra_tii_reset(struct Tii *handle);
void wickra_tii_free(struct Tii *handle);
struct TrendLabel *wickra_trend_label_new(uintptr_t period);
double wickra_trend_label_update(struct TrendLabel *handle, double value);
void wickra_trend_label_batch(struct TrendLabel *handle,
                              const double *input,
                              double *out,
                              uintptr_t n);
void wickra_trend_label_reset(struct TrendLabel *handle);
void wickra_trend_label_free(struct TrendLabel *handle);
struct TrendStrengthIndex *wickra_trend_strength_index_new(uintptr_t period);
double wickra_trend_strength_index_update(struct TrendStrengthIndex *handle, double value);
void wickra_trend_strength_index_batch(struct TrendStrengthIndex *handle,
                                       const double *input,
                                       double *out,
                                       uintptr_t n);
void wickra_trend_strength_index_reset(struct TrendStrengthIndex *handle);
void wickra_trend_strength_index_free(struct TrendStrengthIndex *handle);
struct Trendflex *wickra_trendflex_new(uintptr_t period);
double wickra_trendflex_update(struct Trendflex *handle, double value);
void wickra_trendflex_batch(struct Trendflex *handle,
                            const double *input,
                            double *out,
                            uintptr_t n);
void wickra_trendflex_reset(struct Trendflex *handle);
void wickra_trendflex_free(struct Trendflex *handle);
struct Trima *wickra_trima_new(uintptr_t period);
double wickra_trima_update(struct Trima *handle, double value);
void wickra_trima_batch(struct Trima *handle, const double *input, double *out, uintptr_t n);
void wickra_trima_reset(struct Trima *handle);
void wickra_trima_free(struct Trima *handle);
struct Trix *wickra_trix_new(uintptr_t period);
double wickra_trix_update(struct Trix *handle, double value);
void wickra_trix_batch(struct Trix *handle, const double *input, double *out, uintptr_t n);
void wickra_trix_reset(struct Trix *handle);
void wickra_trix_free(struct Trix *handle);
struct Tsf *wickra_tsf_new(uintptr_t period);
double wickra_tsf_update(struct Tsf *handle, double value);
void wickra_tsf_batch(struct Tsf *handle, const double *input, double *out, uintptr_t n);
void wickra_tsf_reset(struct Tsf *handle);
void wickra_tsf_free(struct Tsf *handle);
struct TsfOscillator *wickra_tsf_oscillator_new(uintptr_t period);
double wickra_tsf_oscillator_update(struct TsfOscillator *handle, double value);
void wickra_tsf_oscillator_batch(struct TsfOscillator *handle,
                                 const double *input,
                                 double *out,
                                 uintptr_t n);
void wickra_tsf_oscillator_reset(struct TsfOscillator *handle);
void wickra_tsf_oscillator_free(struct TsfOscillator *handle);
struct Tsi *wickra_tsi_new(uintptr_t long_, uintptr_t short_);
double wickra_tsi_update(struct Tsi *handle, double value);
void wickra_tsi_batch(struct Tsi *handle, const double *input, double *out, uintptr_t n);
void wickra_tsi_reset(struct Tsi *handle);
void wickra_tsi_free(struct Tsi *handle);
struct UlcerIndex *wickra_ulcer_index_new(uintptr_t period);
double wickra_ulcer_index_update(struct UlcerIndex *handle, double value);
void wickra_ulcer_index_batch(struct UlcerIndex *handle,
                              const double *input,
                              double *out,
                              uintptr_t n);
void wickra_ulcer_index_reset(struct UlcerIndex *handle);
void wickra_ulcer_index_free(struct UlcerIndex *handle);
struct UniversalOscillator *wickra_universal_oscillator_new(uintptr_t period);
double wickra_universal_oscillator_update(struct UniversalOscillator *handle, double value);
void wickra_universal_oscillator_batch(struct UniversalOscillator *handle,
                                       const double *input,
                                       double *out,
                                       uintptr_t n);
void wickra_universal_oscillator_reset(struct UniversalOscillator *handle);
void wickra_universal_oscillator_free(struct UniversalOscillator *handle);
struct UpsidePotentialRatio *wickra_upside_potential_ratio_new(uintptr_t period, double mar);
double wickra_upside_potential_ratio_update(struct UpsidePotentialRatio *handle, double value);
void wickra_upside_potential_ratio_batch(struct UpsidePotentialRatio *handle,
                                         const double *input,
                                         double *out,
                                         uintptr_t n);
void wickra_upside_potential_ratio_reset(struct UpsidePotentialRatio *handle);
void wickra_upside_potential_ratio_free(struct UpsidePotentialRatio *handle);
struct ValueAtRisk *wickra_value_at_risk_new(uintptr_t period, double confidence);
double wickra_value_at_risk_update(struct ValueAtRisk *handle, double value);
void wickra_value_at_risk_batch(struct ValueAtRisk *handle,
                                const double *input,
                                double *out,
                                uintptr_t n);
void wickra_value_at_risk_reset(struct ValueAtRisk *handle);
void wickra_value_at_risk_free(struct ValueAtRisk *handle);
struct Variance *wickra_variance_new(uintptr_t period);