bindings/csharp/Wickra/Generated/NativeMethods.g.cs


    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_stoch_rsi_new(nuint rsiPeriod, nuint stochPeriod);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_stoch_rsi_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_stoch_rsi_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_stoch_rsi_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_stoch_rsi_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_super_smoother_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_super_smoother_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_super_smoother_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_super_smoother_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_super_smoother_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_t3_new(nuint period, double v);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_t3_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_t3_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_t3_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_t3_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_tail_ratio_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_tail_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_tail_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_tail_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_tail_ratio_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_tema_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_tema_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_tema_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_tema_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_tema_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_tii_new(nuint smaPeriod, nuint devPeriod);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_tii_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_tii_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_tii_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_tii_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_trend_label_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_trend_label_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_trend_label_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_trend_label_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_trend_label_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_trend_strength_index_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_trend_strength_index_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_trend_strength_index_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_trend_strength_index_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_trend_strength_index_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_trendflex_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_trendflex_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_trendflex_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_trendflex_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_trendflex_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_trima_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_trima_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_trima_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_trima_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_trima_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_trix_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_trix_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_trix_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_trix_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_trix_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_tsf_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_tsf_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_tsf_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_tsf_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_tsf_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_tsf_oscillator_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_tsf_oscillator_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_tsf_oscillator_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_tsf_oscillator_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_tsf_oscillator_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_tsi_new(nuint @long, nuint @short);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_tsi_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_tsi_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_tsi_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_tsi_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_ulcer_index_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_ulcer_index_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_ulcer_index_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ulcer_index_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ulcer_index_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_universal_oscillator_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_universal_oscillator_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_universal_oscillator_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_universal_oscillator_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_universal_oscillator_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_upside_potential_ratio_new(nuint period, double mar);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_upside_potential_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_upside_potential_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_upside_potential_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_upside_potential_ratio_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_value_at_risk_new(nuint period, double confidence);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_value_at_risk_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_value_at_risk_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_value_at_risk_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_value_at_risk_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_variance_new(nuint period);
